# heisenberg-ssc-health-check

./: LICENSE  README.md  pyproject.toml
heisenberg/: __init__.py  bulk_check.py  compromise_analysis.py  config.py  github_sbom.py  heisenberg_depsdev.py  main.py  npm_postinstall.py  sbom_parser.py  sbom_utils.py  vendor.py
